<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="1"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_sort_by"
        android:orderInCategory="20"
        android:title="@string/sort_by"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_display_config"
        android:orderInCategory="30"
        android:title="@string/display_config"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>
