<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_preview"
        android:icon="@drawable/ic_edit_eye"
        android:orderInCategory="1"
        android:title="@string/preview"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/ic_edit_undo"
        android:orderInCategory="11"
        android:title="@string/undo"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_redo"
        android:icon="@drawable/ic_edit_redo"
        android:orderInCategory="12"
        android:title="@string/redo"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_expand_more"
        android:orderInCategory="20"
        android:title="@string/more"
        app:showAsAction="always" />
</menu>
