<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/vm_dimen_24">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_link_title_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_link_title"
                style="@style/VMEdit"
                android:hint="@string/link_title_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_link_url_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_link_url"
                style="@style/VMEdit"
                android:hint="@string/link_url_hint" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/vm_margin_normal"
        android:layout_marginRight="@dimen/vm_dimen_24"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/VMBtn.Flat"
            android:text="@string/cancel"
            android:textColor="@color/app_accent" />

        <Button
            android:id="@+id/btn_ok"
            style="@style/VMBtn.Flat"
            android:text="@string/ok"
            android:textColor="@color/app_accent" />
    </LinearLayout>
</LinearLayout>