<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsActivity">

    <!--定义顶部 TopBar-->
    <include layout="@layout/widget_common_top_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_card_bg"
        android:orientation="vertical">

        <com.vmloft.develop.library.tools.widget.VMLineView
            android:id="@+id/setting_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:vm_line_decoration="true"
            app:vm_line_right_icon="@drawable/vm_ic_arrow_right"
            app:vm_line_title="@string/settings_me" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_card_bg"
        android:orientation="vertical">

        <com.vmloft.develop.library.tools.widget.VMLineView
            android:id="@+id/setting_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:vm_line_decoration="true"
            app:vm_line_right_icon="@drawable/vm_ic_arrow_right"
            app:vm_line_title="@string/help" />

        <com.vmloft.develop.library.tools.widget.VMLineView
            android:id="@+id/setting_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:vm_line_right_icon="@drawable/vm_ic_arrow_right"
            app:vm_line_title="@string/about" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vm_margin_normal"
        android:background="@color/app_card_bg"
        android:orientation="vertical">

        <com.vmloft.develop.library.tools.widget.VMLineView
            android:id="@+id/setting_sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:vm_line_right_icon="@drawable/vm_ic_arrow_right"
            app:vm_line_title="@string/sign_out" />
    </LinearLayout>
</LinearLayout>