<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".sign.SignUpFragment"
    >

    <LinearLayout
        android:id="@+id/layout_sign_in_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/vm_dimen_24"
        android:gravity="left"
        android:orientation="vertical"
        android:padding="@dimen/vm_dimen_36"
        >

        <TextView
            android:layout_marginBottom="@dimen/vm_dimen_24"
            android:text="@string/sign_up"
            style="@style/VMText.Display1"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vm_margin_normal"
            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/edit_account"
                    android:hint="@string/account_name"
                    style="@style/VMEdit"
                    />
            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/btn_clear_account"
                android:layout_width="@dimen/vm_dimen_36"
                android:layout_height="@dimen/vm_dimen_36"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/vm_dimen_8"
                android:background="@drawable/vm_click_full_transparent"
                android:src="@drawable/vm_ic_close_24dp"
                android:tint="@color/vm_black_54"
                android:visibility="invisible"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/edit_password"
                    android:hint="@string/account_password"
                    android:inputType="textPassword|textImeMultiLine"
                    style="@style/VMEdit"
                    />
            </android.support.design.widget.TextInputLayout>


            <ImageButton
                android:id="@+id/btn_show_password"
                android:layout_width="@dimen/vm_dimen_36"
                android:layout_height="@dimen/vm_dimen_36"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/vm_dimen_8"
                android:background="@drawable/vm_click_full_transparent"
                android:src="@drawable/ic_visibility_off"
                android:tint="@color/vm_black_54"
                android:visibility="visible"
                />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_marginTop="@dimen/vm_margin_large"
            android:alpha="0.5"
            android:enabled="false"
            android:text="@string/sign_up"
            style="@style/VMBtn.Red.Fillet"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/vm_margin_large"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <TextView
                android:text="@string/already_have_an_account"
                style="@style/VMText.Caption"
                />

            <Button
                android:id="@+id/btn_go_sign_in"
                android:text="@string/sign_in_go"
                style="@style/VMBtn.Flat"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>