<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    tools:context=".home.MainActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/widget_common_top_bar" />

        <RelativeLayout
            android:id="@+id/main_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--头部信息-->
            <include layout="@layout/widget_drawer_header" />

            <!--底部设置等-->
            <LinearLayout
                android:id="@+id/layout_menu_footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/vm_theme_background"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/vm_dimen_0_5"
                    android:background="@color/vm_decoration_gray" />

                <!--切换主题-->
                <LinearLayout
                    android:id="@+id/layout_night_theme"
                    style="@style/VMBtn.Flat.Full"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_night_theme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/vm_dimen_16"
                        android:layout_marginRight="@dimen/vm_dimen_16"
                        android:src="@drawable/ic_theme_night"
                        android:tint="@color/menu_icon_selector" />

                    <TextView
                        style="@style/VMText.Menu"
                        android:text="@string/night_theme"
                        android:textColor="@color/menu_text_selector" />
                </LinearLayout>
            </LinearLayout>

            <!--菜单项-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/layout_menu_footer"
                android:layout_below="@id/layout_drawer_header"
                android:background="@color/vm_theme_background"
                android:orientation="vertical"
                android:paddingTop="@dimen/vm_dimen_8">

                <!--所有笔记-->
                <LinearLayout
                    android:id="@+id/layout_note_all"
                    style="@style/VMBtn.Flat.Full"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/vm_dimen_16"
                        android:layout_marginRight="@dimen/vm_dimen_16"
                        android:src="@drawable/ic_file"
                        android:tint="@color/menu_icon_selector" />

                    <TextView
                        style="@style/VMText.Menu"
                        android:text="@string/note_all"
                        android:textColor="@color/menu_text_selector" />
                </LinearLayout>

                <!--标签-->
                <LinearLayout
                    android:id="@+id/layout_note_books"
                    style="@style/VMBtn.Flat.Full"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/vm_dimen_16"
                        android:layout_marginRight="@dimen/vm_dimen_16"
                        android:src="@drawable/ic_book"
                        android:tint="@color/menu_icon_selector" />

                    <TextView
                        style="@style/VMText.Menu"
                        android:text="@string/note_books"
                        android:textColor="@color/menu_text_selector" />
                </LinearLayout>

                <!--回收站-->
                <LinearLayout
                    android:id="@+id/layout_note_trash"
                    style="@style/VMBtn.Flat.Full"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/vm_dimen_16"
                        android:layout_marginRight="@dimen/vm_dimen_16"
                        android:src="@drawable/ic_delete"
                        android:tint="@color/menu_icon_selector" />

                    <TextView
                        style="@style/VMText.Menu"
                        android:text="@string/note_trash"
                        android:textColor="@color/menu_text_selector" />
                </LinearLayout>

                <!--设置-->
                <LinearLayout
                    android:id="@+id/layout_settings"
                    style="@style/VMBtn.Flat.Full"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/vm_dimen_16"
                        android:layout_marginRight="@dimen/vm_dimen_16"
                        android:src="@drawable/ic_settings"
                        android:tint="@color/menu_icon_selector" />

                    <TextView
                        style="@style/VMText.Menu"
                        android:text="@string/settings"
                        android:textColor="@color/menu_text_selector" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>
